# photos-python

./: .gitignore  01_descargar_archivos.py  02_organizar_fotos.py  02_organizar_por_fecha.py  03_agrupar.py  03_comprimir.py  04_comprimir.py  PhotosSync.spec  README.md  app.py  conexiones_ssh.json  config.py  destino_guardado.json  metadatos_screenshots.json  orchestador.py  pyproject.toml  resumen_por_dia.json
photos_sync/: __init__.py  carpetas.py  cli.py  comprimir.py  conexion.py  config.py  descargar.py  ejecutar_todo.py  escaner.py  flow_layout.py  gui.py  main_window.py  mantener_despierto.py  organizar.py  resumen.py  selector_carpetas.py  ssh_conexion.py  subir_ssh.py
