[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photos-sync"
version = "0.1.0"
description = "Extrae, organiza por fecha y comprime capturas de pantalla desde un Android montado por WebDAV"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
]

[project.scripts]
photos-sync = "photos_sync.cli:main"

[tool.setuptools.packages.find]
include = ["photos_sync*"]
